style.css
body {
    background-image: url('./assets/images/background.png');
    background-repeat: no-repeat;
    background-position: center; /* Centers the image */
    background-size: cover; /* Stretches the image to cover the screen */
    width: vw;
    height: vh; /* Ensures the body covers the full viewport height */
    margin: 0; /* Removes default browser margin */
    padding: 40px;
}
h1, h2 {
    font-family: "Ubuntu", sans-serif;
    font-weight: 500;
    font-style: normal;
}
/* limit paragraph width to 700px */
.text-container {
    max-width: 700px;
}
.project-logo {
    height: 120px;
    padding: 20px;
}
.center-content {
    display: flex;
    flex-flow: column nowrap;
    align-items:center;
    justify-self: center;
}
.front-page-title {
    display: grid;
    width: 475px;
    grid-template-columns: 2fr 1fr;
    grid-template-rows: 40px 50px 70px;
    padding: 20px;
}
body>.center-content>img{
    grid-row: span 3;
}
/* make items flow vertical */
@media (width < 650px) {
    .center-content>div {
        display: flex;
        flex-flow: column nowrap;
    }
    .front-page-title {
        display: flex;
        flex-direction: column;
    }
}
.box {
    display: inline-block;
    background-color:navy;
    color: white;
    text-align: center;
    width: 140px;
    padding: 20px;
    border: 2px solid black;  
    border-radius: 15px;
    margin: 10px;
    font-family: "Ubuntu", sans-serif;
    font-weight: 500;
    font-style: normal;
}
.flex-box-two-ends {
  display: flex;
  justify-content: space-between;
  width: 100%; /* Ensures it fills the container */
}

